# nvgpu_tegra

./: pyproject.toml
src/nvgpu/: __init__.py  __main__.py  agent.py  list_gpus.py  master.py  nvml.py  webapp.py
src/nvgpu/tegra/: __init__.py
